--- a/less-demo3c.less
+++ b/less-demo3c.less
@@ -1,6 +1,6 @@
 // http://ghanizahid.com/less-demo3c1.less
 @path : "http://ghanizahid.com"; // website URL
-@import "@{path}/less-demo3c1.less";
+@import "@{path}/less-demo3c1.less"; // Throwing error: Unauthorized
 .myclass {
    color : #A52A2A;
 }
